Updated account popup

--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -36,6 +36,9 @@ $material-icons-font-path: '~material-icons/iconfont/';
 .mb-10 {
     margin-bottom: 10px !important;
 }
+.pb-5 {
+    padding-bottom: 5px !important;
+}
 
 .flex-end {
     justify-content: flex-end;
