--- a/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
@@ -13,7 +13,7 @@
                         </mat-select>
                     </mat-form-field>
                 </div> -->
-                <div class="white-block">
+                <div class="white-block pb-5">
                     <h3>Account</h3>
                     <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
