Updated account and tax details popup

--- a/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
@@ -3,33 +3,23 @@
     <mat-tab-group>
         <mat-tab label=" Details">
             <div class="tab-party-details-parent">
-                <!-- <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Type</mat-label> 
-                        <mat-select placeholder="Select Type" formControlName="Type">
-                            <mat-option *ngFor="let type of types" [value]="type.name">
-                                {{type.name}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div> -->
                 <div class="white-block pb-5">
                     <h3>Account</h3>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="12" fxFlex.sm="12">
                         <mat-form-field appearance="outline">
                             <mat-label>Short Code</mat-label>
                             <input matInput autocomplete="off" placeholder="ShortCode" formControlName="ShortCode" type="text">
                             <mat-error *ngIf="personalForm.controls.ShortCode.errors?.required">ShortCode is required</mat-error>                
                         </mat-form-field> 
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
                             <mat-label>Name</mat-label>
                             <input matInput autocomplete="off" placeholder="Name" formControlName="Name" type="text">
                             <mat-error *ngIf="personalForm.controls.Name.errors?.required">Name is required</mat-error>                
                         </mat-form-field> 
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="25">
                         <mat-form-field appearance="outline" class="small">
                             <mat-label>Opening Bal</mat-label>
                             <input matInput autocomplete="off" placeholder="OpeningBal" formControlName="OpeningBal" type="text"> 
@@ -40,7 +30,7 @@
                             <mat-radio-button value="2" class="ml-15">Cr.</mat-radio-button>
                         </mat-radio-group>
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>Account Group</mat-label>
                             <input
@@ -61,18 +51,18 @@
                             </mat-autocomplete>
                         </mat-form-field>
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>Account Head</mat-label>
                             <input
                             matInput
                             aria-label="ACHead"
-                            [matAutocomplete]="auto1"
+                            [matAutocomplete]="auto2"
                             [formControl]="acHeadCtrl"
                             formControlName="ACHead"
                             />
                             <mat-error *ngIf="personalForm.controls.ACHead.errors?.required">Please select ACHead</mat-error>                
-                            <mat-autocomplete #auto1="matAutocomplete">
+                            <mat-autocomplete #auto2="matAutocomplete">
                             <mat-option
                                 *ngFor="let acHeadObj of filteredacHead | async"
                                 [value]="acHeadObj.name"
@@ -82,10 +72,13 @@
                             </mat-autocomplete>
                         </mat-form-field>
                     </div>
+                    <div fxFlex="100" fxFlex.gt-sm="10" fxFlex.sm="50" class="pt-10">
+                        <mat-checkbox [(ngModel)]="checked" class="pl-10">Active</mat-checkbox>
+                    </div>
                 </div>
                 <div class="white-block">
                     <h3>Details</h3>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>City</mat-label>
                             <input
@@ -106,56 +99,55 @@
                             </mat-autocomplete>
                         </mat-form-field>
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="40" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
                             <mat-label>Address</mat-label> 
                             <textarea matInput placeholder="Enter address" formControlName="Address" rows="1"></textarea> 
                         </mat-form-field>
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
                             <mat-label>Pan Number</mat-label>
                             <input matInput autocomplete="off" placeholder="Pan Number" formControlName="Panno" type="text">
                             <mat-error *ngIf="personalForm.controls.Panno.errors?.required">Pan number is required</mat-error>                
                         </mat-form-field> 
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
                             <mat-label>Email</mat-label>
                             <input matInput autocomplete="off" placeholder="Email" formControlName="Email" type="text"> 
                             <mat-error *ngIf="personalForm.controls.Email.errors?.required">Email is required</mat-error>                 
                         </mat-form-field> 
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
                             <mat-label>GST No</mat-label>
                             <input matInput autocomplete="off" placeholder="GST No" formControlName="gstNo" type="text"> 
                             <mat-error *ngIf="personalForm.controls.gstNo.errors?.required">GST No is required</mat-error>                 
                         </mat-form-field> 
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
                             <mat-label>Phone Number</mat-label>
                             <input matInput autocomplete="off" placeholder="Phone Number" formControlName="Phone" type="text"> 
                             <mat-error *ngIf="personalForm.controls.Phone.errors?.required">Phone is required</mat-error>                 
                         </mat-form-field> 
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
                             <mat-label>Telegram Id</mat-label>
                             <input matInput autocomplete="off" placeholder="Telegram Id" formControlName="Telegram" type="text"> 
                             <mat-error *ngIf="personalForm.controls.Telegram.errors?.required">Telegram is required</mat-error>                 
                         </mat-form-field> 
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
                             <mat-label>Telegram No</mat-label>
                             <input matInput autocomplete="off" placeholder="Telegram No" formControlName="Telegramno" type="text"> 
                             <mat-error *ngIf="personalForm.controls.Telegramno.errors?.required">Telegram number is required</mat-error>                 
                         </mat-form-field> 
-                        <mat-checkbox [(ngModel)]="checked" class="pl-10">Apply Tax</mat-checkbox>
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>Broker</mat-label>
                             <input
@@ -175,6 +167,11 @@
                             </mat-option>
                             </mat-autocomplete>
                         </mat-form-field>
+                    </div>
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                        <mat-checkbox [(ngModel)]="checked" class="pl-10">Apply Tax</mat-checkbox>
+                    </div>
+                    <div fxFlex="100" fxFlex.gt-sm="40" fxFlex.sm="50">
                         <mat-checkbox [(ngModel)]="future" class="pl-10">Apply Future Cut Brok</mat-checkbox>
                         <mat-checkbox [(ngModel)]="option" class="pl-10 ml-7">Apply Option Cut Brok</mat-checkbox>
                     </div>
@@ -185,7 +182,7 @@
             <div class="tab-tax-details-parent">
                 <div class="white-block">
                     <h3>Tax Details</h3>
-                    <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>Tax type</mat-label>
                             <input
@@ -206,7 +203,7 @@
                             </mat-autocomplete>
                         </mat-form-field>
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>Exchange</mat-label>
                             <input
@@ -227,11 +224,54 @@
                             </mat-autocomplete>
                         </mat-form-field>
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="50">
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                         <mat-form-field appearance="outline">
-                            <mat-label>Intra day Rate</mat-label>
+                            <mat-label>Intraday Rate</mat-label>
                             <input matInput autocomplete="off" placeholder="IntraDay" formControlName="IntraDay" type="text"> 
                             <mat-error *ngIf="personalForm.controls.IntraDay.errors?.required">IntraDay is required</mat-error>                 
+                        </mat-form-field> 
+                    </div>
+                    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
+                        <mat-form-field appearance="outline">
+                            <mat-label>From</mat-label>
+                            <input matInput [matDatepicker]="picker1">
+                            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                            <mat-datepicker #picker1></mat-datepicker>
+                        </mat-form-field>                  
+                    </div>
+                    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
+                        <mat-form-field appearance="outline">
+                            <input matInput [matDatepicker]="picker2" placeholder="To">
+                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                            <mat-datepicker #picker2></mat-datepicker>
+                        </mat-form-field>                  
+                    </div>
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                        <mat-form-field class="example-full-width" appearance="outline">
+                            <mat-label>InsType</mat-label>
+                            <input
+                            matInput
+                            aria-label="InsTypeObj"
+                            [matAutocomplete]="auto3"
+                            [formControl]="InsTypeCtrl"
+                            formControlName="InsTypeName"
+                            />
+                            <mat-error *ngIf="personalForm.controls.InsTypeName.errors?.required">Please select ACGroup</mat-error>                
+                            <mat-autocomplete #auto3="matAutocomplete" (optionSelected)='getSelectedInsType($event.option)'>
+                            <mat-option
+                                *ngFor="let InsTypeObj of filteredInsType | async"
+                                [value]="InsTypeObj.item2"
+                                [id]="InsTypeObj.item1">
+                                <span>{{cityObj.item2}}</span>
+                            </mat-option>
+                            </mat-autocomplete>
+                        </mat-form-field>
+                    </div>
+                    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                        <mat-form-field appearance="outline">
+                            <mat-label>Delivery Rate</mat-label>
+                            <input matInput autocomplete="off" placeholder="DeliveryRate" formControlName="DeliveryRate" type="text"> 
+                            <mat-error *ngIf="personalForm.controls.DeliveryRate.errors?.required">DeliveryRate is required</mat-error>                 
                         </mat-form-field> 
                     </div>
                 </div>
